<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.ag-libs</groupId>
  <artifactId>lathe-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>lathe-core</module>
    <module>lathe-junit</module>
    <module>lathe-test-runner</module>
    <module>lathe-compiler</module>
    <module>lathe-server</module>
    <module>lathe-maven-extension</module>
    <module>lathe-maven-plugin</module>
  </modules>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- dependency versions -->
    <junit.version>6.0.3</junit.version>
    <assertj.version>3.27.7</assertj.version>
    <mockito.version>5.18.0</mockito.version>
    <spotless.version>2.44.5</spotless.version>
    <google-java-format.version>1.35.0</google-java-format.version>
    <compiler.version>3.13.0</compiler.version>
    <git-commit-id.version>10.0.0</git-commit-id.version>
    <!-- 3.5.5 regresses the forked-VM exit handshake (ThreadedStreamConsumer.Pumper hang,
         "VM terminated without properly saying goodbye", Tests run: 0) when the build runs
         under a directly-launched mvn process (not the mvnd daemon); see
         docs/planned/lathe-run-test-debug.md section 14 -->
    <surefire.version>3.5.4</surefire.version>
    <jar.version>3.4.2</jar.version>
    <jacoco.version>0.8.14</jacoco.version>
    <!-- default empty so @{argLine} resolves when JaCoCo agent is not active -->
    <argLine></argLine>
    <lsp4j.version>1.0.0</lsp4j.version>
    <plexus-compiler.version>2.16.2</plexus-compiler.version>
    <plexus-java.version>1.2.0</plexus-java.version>
    <gson.version>2.14.0</gson.version>
    <validcheck.version>0.11.0</validcheck.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.ag-libs</groupId>
        <artifactId>lathe-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.ag-libs</groupId>
        <artifactId>lathe-junit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.ag-libs</groupId>
        <artifactId>lathe-test-runner</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.ag-libs</groupId>
        <artifactId>lathe-compiler</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.ag-libs</groupId>
        <artifactId>lathe-server</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.lsp4j</groupId>
        <artifactId>org.eclipse.lsp4j</artifactId>
        <version>${lsp4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.lsp4j</groupId>
        <artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
        <version>${lsp4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-compiler-api</artifactId>
        <version>${plexus-compiler.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-compiler-javac</artifactId>
        <version>${plexus-compiler.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.codehaus.plexus</groupId>
        <artifactId>plexus-java</artifactId>
        <version>${plexus-java.version}</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-launcher</artifactId>
        <version>${junit.version}</version>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.ag-libs.validcheck</groupId>
        <artifactId>validcheck</artifactId>
        <version>${validcheck.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless.version}</version>
          <configuration>
            <java>
              <googleJavaFormat>
                <version>${google-java-format.version}</version>
                <style>GOOGLE</style>
              </googleJavaFormat>
            </java>
            <formats>
              <format>
                <includes>
                  <include>**/*.md</include>
                  <include>**/*.sh</include>
                </includes>
                <trimTrailingWhitespace></trimTrailingWhitespace>
                <endWithNewline></endWithNewline>
              </format>
            </formats>
            <pom>
              <sortPom></sortPom>
            </pom>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>check</goal>
              </goals>
              <phase>verify</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${compiler.version}</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:all</arg>
              <arg>-Werror</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${jar.version}</version>
          <configuration>
            <archive>
              <manifest>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
              <manifestEntries>
                <Lathe-Build-Time>${git.build.time}</Lathe-Build-Time>
                <Lathe-Git-Commit>${git.commit.id.abbrev}</Lathe-Git-Commit>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco.version}</version>
          <executions>
            <execution>
              <id>prepare-agent</id>
              <goals>
                <goal>prepare-agent</goal>
              </goals>
            </execution>
            <execution>
              <id>report</id>
              <goals>
                <goal>report</goal>
              </goals>
              <phase>verify</phase>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <version>${git-commit-id.version}</version>
        <configuration>
          <generateGitPropertiesFile>false</generateGitPropertiesFile>
        </configuration>
        <executions>
          <execution>
            <id>git-revision</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
